<?xml version="1.0"?>
<package>
    <name>gazebo_ros_joints_publisher</name>
    <version>1.0.0</version>
    <description>ROS package with gazebo plugin that publishes joint states of a model</description>

    <maintainer email="yossiovcharik@gmail.com">Yossi</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>gazebo_plugins</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>geographiclib</run_depend>
    <run_depend>gazebo_plugins</run_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- gazebo_ros_paths_plugin automatically adds these to
            GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
            the package.xml file. You can than use URIs of type model://my_package/stuff. -->
        <gazebo_ros
                gazebo_plugin_path="${prefix}/lib"
                gazebo_model_path="${prefix}/.."/>
    </export>

</package>
